--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,76 @@
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #c7c7c7;
+}
+
+#chat-container {
+    width: 80%;
+    max-width: 600px;
+    margin: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #999999;
+}
+
+#chat-window {
+    height: 400px;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+#chat-messages li {
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    background-color: rgb(231, 231, 231);
+    list-style-type: none;
+    display: block;
+    clear: both;
+}
+
+#chat-form {
+    padding: 10px;
+    display: flex;
+}
+
+#message-input {
+    flex-grow: 1;
+    padding: 10px;
+    border: 1px solid #3a3a3a;
+    border-radius: 20px;
+    margin-right: 10px;
+}
+
+#chat-form button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    background-color: #545454;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+#chat-form button:hover {
+    background-color: #e2e3e2;
+}
+
+.name-timestamp {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.name {
+    font-size: 0.75rem;
+}
+
+.timestamp {
+    font-size: 0.75rem;
 }
